# afie

./: .gitignore  Alex Hormuzi Early Growth Analysis.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  Dan Koe Early Growth Analysis.md  Patrick McKenzie Early Growth Analysis.md  Paul Graham Early Growth Analysis.md  README.md  SECURITY.md  Sahil Lavingia Early Content Analysis.md  alpha_blueprint.md  api_contracts.md  database_schema.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  polyglot_architecture_blueprint.md  project_vision.md  turbo.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
apps/ai-worker/: .env.example  pyproject.toml
apps/ai-worker/app/: fsm.py  main.py  orchestrate.py
apps/ai-worker/app/api/: approve.py  consume.py  deps.py  schemas.py
apps/ai-worker/app/application/: approve.py  ingest.py  synthesize.py
apps/ai-worker/app/core/: container.py  settings.py
apps/ai-worker/app/db/: ingest.py  saga.py
apps/ai-worker/app/domain/: models.py  ports.py
apps/ai-worker/app/infrastructure/db/: ingest_repo.py  saga_repo.py  session.py
apps/ai-worker/app/infrastructure/llm/: anthropic_adapter.py  frameworks.py  gemini_adapter.py  persona.py  router.py
apps/ai-worker/app/security/: payload_guard.py
apps/ai-worker/app/synthesis/: router.py
apps/ai-worker/migrations/: 0001_multi_tenant_init.sql
apps/ai-worker/tests/: test_approve.py  test_consume.py  test_payload_guard.py  test_saga_db.py  test_synthesis.py
apps/web/: .env.example  (+5 more)
tasks/: lessons.md  task_ledger.md  todo.md
(+21 files in other folders)
